don't send two right mouse up events into Gecko for each real right mouse up event. fixes context menus in Google spreadsheets. b=418689 r=smichaud sr=vlad